# lib/db/src/schema/index.ts
@@ -21,4 +21,5 @@ export * from "./collaboration";
 export * from "./scoring";
 export * from "./invoicing";
 export * from "./chat";
+export * from "./payroll-settings";
 export * from "./relations";
